--- a/index.html
+++ b/index.html
@@ -9,7 +9,16 @@
 </head>
 <body>
     <h1>Snake Game</h1>
+    <div class="starting-screen">
+        <h2>Ready?</h3>
+        <p>Click any arrow keys to start, Good luck!</p>
+    </div>
     <canvas id="game" width="400" height="400"></canvas>
+
+    <div class="restart">
+        <h3>Click to Restart</h3>
+    </div>
+
     <script src="main.js"></script>
 </body>
 </html>
